--- a/styles.css
+++ b/styles.css
@@ -208,13 +208,20 @@ fieldset{
     grid-template-columns: 0.25fr 6fr 0.25fr 6fr;
     gap: 1rem;
     margin: 1rem 0;
+    margin-inline-start: 2px;
+    margin-inline-end: 2px;
+    padding-block-start: 0.35em;
+    padding-inline-start: 0.75em;
+    padding-inline-end: 0.75em;
+    padding-block-end: 0.35em;
     border-width: 2px;
     border-style: groove;
     border-color: var(--red);
 }
 legend {
     display: block;
-    padding: 0 2px;
+    padding-inline-start: 2px;
+    padding-inline-end: 2px;
 }
 /* Code for Custom Radios - Compare to Your zyBook, I added additional code to make these match my form styles */
 input[type=radio] + label {
